// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TreeHandler/> render with default/required props 1`] = `
<section
  className="tree "
  onClick={[Function]}
>
  <input
    className="tree_input"
    data-cy="tree-pattern"
    onChange={[Function]}
    value=""
  />
</section>
`;

exports[`<TreeHandler/> render with optional props [::data-cy] as "{{data-cy}}" 1`] = `
<section
  className="tree "
  onClick={[Function]}
>
  <input
    className="tree_input"
    data-cy="{{data-cy}}tree-pattern"
    onChange={[Function]}
    value=""
  />
</section>
`;

exports[`<TreeHandler/> render with optional props [::title] as "{{title}}" 1`] = `
<section
  className="tree "
  onClick={[Function]}
>
  <input
    className="tree_input"
    data-cy="tree-pattern"
    onChange={[Function]}
    value=""
  />
</section>
`;

exports[`<TreeHandler/> render with optional props if node has isVisible property as false, it should NOT render it 1`] = `
<section
  className="tree "
  onClick={[Function]}
>
  <input
    className="tree_input"
    data-cy="tree-pattern"
    onChange={[Function]}
    value=""
  />
</section>
`;
